# ml-algos

./: .bazelrc  .clang-tidy  .gitignore  BUILD  CMakeLists.txt  MODULE.bazel  README.md  cross_validation.cpp  ensemble.h  feature_importance.cpp  hyperparameter_search.cpp  k_means.h  lda.h  linear  linear.h  main.cpp  matrix.cpp  matrix.h  metrics.cpp  metrics.h  ml-algos  mlp.h  naive_bayes.h  pca.h  preprocessing.cpp  sample_binary_data.csv  sample_invalid_inconsistent.csv  sample_invalid_nonnumeric.csv  serialization.cpp  svm.h  tree.h  tsne.h
.github/workflows/: ci.yml
app/: BUILD.bazel  main.cc
data/: BUILD.bazel  prediction_features.csv  regression_features.csv  sample_binary_imbalanced.csv  sample_binary_label_offset.csv  sample_data.csv
data/v3/: classification_binary.csv  classification_offset.csv  regression.csv
ml/core/: BUILD.bazel  dense_matrix.cc  dense_matrix.h  format.h  linalg.cc  linalg.h  metrics.cc  metrics.h  parse.h  state_reader.h
ml/io/: BUILD.bazel  csv.cc  csv.h  model_bundle.cc  model_bundle.h
ml/models/: BUILD.bazel  factories.cc  interfaces.h  models.cc  specs.cc  specs.h
ml/models/detail/: anomaly.cc  classification.cc  common.cc  common.h  ensembles.cc  factory_hooks.h  knn_classification.cc  knn_regression.cc  linear_regression.cc  model_context.h  tree_state.h  trees.cc
ml/pipeline/: BUILD.bazel  pipeline.cc  pipeline.h  registry.cc  registry.h  splits.cc  splits.h  types.h
ml/preprocess/: BUILD.bazel  specs.cc  specs.h  transformers.cc  transformers.h
scripts/: check_clang_format.sh  check_clang_tidy.sh
src/: cross_validation.cpp  cross_validation.h  feature_importance.cpp  feature_importance.h  hyperparameter_search.cpp  hyperparameter_search.h  main.cpp  matrix.cpp  matrix.h  metrics.cpp  metrics.h  ml_v2.cpp  ml_v2.h  preprocessing.cpp  preprocessing.h  serialization.cpp
src/supervised/: adaboost.cpp  deep_sequence_models.cpp  ensemble.cpp  extra_trees.cpp  gaussian_process.cpp  knn.cpp  lightgbm_catboost.cpp  linear.cpp  logistic_regression.cpp  meta_ensemble.cpp  mlp.cpp  modern_mlp.cpp  naive_bayes.cpp  svm.cpp  time_series.cpp  tree.cpp  xgboost.cpp
src/unsupervised/: dbscan.cpp  gmm.cpp  hierarchical.cpp  isolation_forest.cpp  k_means.cpp  lda.cpp  lof.cpp  one_class_svm.cpp  optics.cpp  pca.cpp  spectral.cpp  tsne.cpp  umap.cpp
supervised/: adaboost.cpp  ensemble.cpp  ensemble.h  gaussian_process.cpp  gaussian_process.h  knn.cpp  linear.cpp  logistic_regression.cpp  meta_ensemble.cpp  mlp.cpp  mlp.h  modern_mlp.cpp  naive_bayes.cpp  naive_bayes.h  svm.cpp  svm.h  tree.cpp  tree.h  xgboost.cpp
tests/: BUILD.bazel  benchmark_runtime.sh  cli_smoke_test.sh  core_test.cc  io_test.cc  models_test.cc  pipeline_test.cc  preprocess_test.cc  smoke_cli_parity_test.sh  smoke_cli_test.sh
tests/support/: test_paths.h  test_support.h
unsupervised/: dbscan.cpp  gmm.cpp  hierarchical.cpp  isolation_forest.cpp  k_means.cpp  k_means.h  lda.cpp  pca.cpp  spectral.cpp  tsne.cpp
