load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "ml-algos",
    srcs = ["main.cc"],
    deps = [
        "//ml/core",
        "//ml/io",
        "//ml/models",
        "//ml/pipeline",
        "//ml/pipeline:pipeline_types",
        "//ml/preprocess",
    ],
)
