load("@rules_cc//cc:defs.bzl", "cc_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:public"])

cc_test(
    name = "core_test",
    srcs = [
        "core_test.cc",
        "support/test_support.h",
    ],
    deps = ["//ml/core"],
)

cc_test(
    name = "io_test",
    srcs = [
        "io_test.cc",
        "support/test_paths.h",
        "support/test_support.h",
    ],
    data = [
        "//data:classification_binary.csv",
        "//data:regression.csv",
    ],
    deps = [
        "//ml/io",
        "//ml/pipeline:pipeline_types",
    ],
)

cc_test(
    name = "models_test",
    srcs = [
        "models_test.cc",
        "support/test_support.h",
    ],
    deps = [
        "//ml/core",
        "//ml/models",
    ],
)

cc_test(
    name = "preprocess_test",
    srcs = [
        "preprocess_test.cc",
        "support/test_support.h",
    ],
    deps = [
        "//ml/core",
        "//ml/preprocess",
    ],
)

cc_test(
    name = "pipeline_test",
    srcs = [
        "pipeline_test.cc",
        "support/test_paths.h",
        "support/test_support.h",
    ],
    data = [
        "//data:classification_offset.csv",
        "//data:prediction_features.csv",
    ],
    deps = [
        "//ml/core",
        "//ml/io",
        "//ml/models",
        "//ml/pipeline",
        "//ml/pipeline:pipeline_types",
        "//ml/preprocess",
    ],
)

sh_test(
    name = "cli_smoke_test",
    srcs = ["cli_smoke_test.sh"],
    data = [
        "//app:ml-algos",
        "//data:classification_binary.csv",
        "//data:classification_offset.csv",
        "//data:prediction_features.csv",
        "//data:regression.csv",
        "//data:regression_features.csv",
    ],
)
