load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "io",
    srcs = [
        "csv.cc",
        "model_bundle.cc",
    ],
    hdrs = [
        "csv.h",
        "model_bundle.h",
    ],
    deps = [
        "//ml/core",
        "//ml/models",
        "//ml/pipeline:pipeline_types",
        "//ml/preprocess",
    ],
)
