load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "pipeline_types",
    hdrs = ["types.h"],
    deps = [
        "//ml/core",
        "//ml/models",
        "//ml/preprocess",
    ],
)

cc_library(
    name = "pipeline",
    srcs = ["pipeline.cc"],
    hdrs = ["pipeline.h"],
    deps = [
        ":pipeline_types",
        "//ml/core",
        "//ml/models",
        "//ml/preprocess",
    ],
)
